--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -235,7 +235,7 @@ body {
 
 /* features container */
 
-.features-main-container .carousel-control-prev-icon,
+/*.features-main-container .carousel-control-prev-icon,
     .features-main-container .carousel-control-next-icon {
         background-color: rgba(51, 57, 153, 1); 
         width: 30px;
@@ -254,7 +254,7 @@ body {
     
     .features-main-container .carousel-indicators .active {
         background-color: #333999; 
-    }
+    }*/
 .features-container{
     padding: 80px;
     margin-top: 40px;
@@ -880,3 +880,88 @@ hr {
     padding: 10px;
     border-radius: 10px;
 }
+
+
+
+.testimonials{
+    background-image: url("../Images/unnamed.png");
+    /*background-color: pink;*/
+    padding-top: 70px;
+    padding-bottom: 60px;
+}
+.testimonials-sub-card{
+    border: 2px solid #989bcc;
+    padding: 20px;
+}
+.testi-profile-2{
+    position:relative;
+    bottom: -50px;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+}
+.testi-sub-card-para-2{
+    font-size: 16px;
+    margin-bottom: 0px;
+    padding-top: 10px;
+}
+.testi-sub-head-2{
+    padding-top: 50px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #333999;
+}
+.testimonials .carousel-indicators li {
+    background-color: #333999; 
+}
+
+
+.testimonials .carousel-indicators .active {
+    background-color: #333999; 
+    opacity: 0.8; 
+}
+.testimonials-para{
+    color: #333999;
+    font-size: 20px;
+    font-weight: 600;
+    padding-top: 20px;
+}
+.testimonials-head{
+    color: #000;
+    font-size: 40px;
+    font-weight: 600;
+}
+/* testimonials */
+
+
+
+.why-choose-section-container{
+    background-color:#f8f9fa;
+    width: 100%;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.why-choose-section-content{
+    padding: 20px;
+}
+.why-choose-content-head{
+    color: #333999;
+    font-size: 40px;
+    font-weight: 600;
+}
+.why-choose-content-para{
+    color: #000;
+    font-size: 16px;
+
+}
+.why-choose-section-sub-card{
+    border: 1px solid #333999;
+    padding: 10px;
+    margin-top: 15px;
+    border-radius: 5px;
+}
+.why-choose-sub-card-para{
+    font-size: 16px;
+}
+
+
