--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -84,9 +84,20 @@ body {
     font-size: 16px;
 
 }
+@media screen and (max-width: 800px){
+    .rexx-section-main-heading{
+        font-size: 20px;
+    }
+}
 @media screen and (max-width: 480px){
     .rexx-section-main-heading{
         font-size: 20px;
+    }
+    .rexx-hero-section-container .carousel-control-prev{
+        display:none;
+    }
+    .rexx-hero-section-container .carousel-control-next{
+        display:none;
     }
 }
 /*Rexx home section */
@@ -97,7 +108,7 @@ body {
     background-color:#fff;
     width: 100%;
     padding-top: 120px;
-    padding-bottom: 60px;
+    padding-bottom: 90px;
 }
 .why-choose-section-content{
     padding: 20px;
@@ -154,6 +165,13 @@ body {
 .why-choose-section-image{
     padding-top: 30px;
     
+}
+@media (max-width: 800px){
+    .why-choose-content-head {
+        line-height: 1.5;
+        font-size: 30px;
+        font-weight: 600;
+    }
 }
 @media (max-width: 576px){
     .why-choose-content-para {
@@ -380,9 +398,7 @@ body {
         }
     
         .we-offer-area.text-center .item i::after {
-            height: 60px;
-            left: -7px;
-            width: 58px;
+            display: none;
         }
     }
     
@@ -396,6 +412,10 @@ body {
     
         .we-offer-area.text-center .item i::after {
             display: none;
+        }
+        .rexx-features-main-head-2 {
+            font-size: 30px;
+            padding-bottom: 10px;
         }
     }
     
@@ -643,7 +663,7 @@ body {
     width: 330px;
     height: 600px;
     display: block;
-    margin-left: 10px;
+    margin-left: 15px;
     padding-top: 50px;
     padding-left: 10px;
     padding-right: 10px;
@@ -667,38 +687,73 @@ body {
     font-size: 16px;
     margin-bottom: 3px;
 }
-@media (max-width: 1024px) {
+@media (width: 1024px) {
+    .How-work-container{
+        
+        padding-top: 0px;
+        padding-bottom: 120px;
+    
+    }
     .swiper-container {
         width: 300px;
-        height: 100%;
+        height: 600px;
         z-index: 999;
-        margin: 60px 0 90px 150px;
+        margin-top: 130px;
+        
     }
 
     .swiper-slide img {
-        width: 300px;
-        height: 450px;
+        width: 280px;
+        height: 500px;
+        display: block;
+        margin-left: 10px;
+        padding-top: 50px;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-top: 30px;
     }
 
     .how-work-main-head {
+        margin-top: 0px;
         font-size: 30px;
         font-weight: 600;
-        margin: 80px 0 0 10px;
+        padding-bottom: 40px;
+
+    }
+    .how-work-main-para {
+        color: #333999;
+        font-size: 16px;
+        font-weight: 600;
+        margin-top: 160px;
+        
     }
 }
 
 
 @media (max-width: 800px) {
+    .How-work-container{
+        width: 100%;
+        background-color: #fff; 
+        min-height: 70vh;
+        display: flex;
+        align-items: center; 
+        justify-content: center;
+        padding-top: 0px;
+        padding-bottom: 120px;
+    
+    }
     .swiper-container {
         width: 340px;
         height: 100%;
         z-index: 999;
-        
+        margin-left: 100px;
+        margin-top: 140px;
     }
 
     .swiper-slide img {
         width: 300px;
         height: 450px;
+        margin-left: 20px;
     }
 
     .how-work-main-head {
@@ -713,7 +768,7 @@ body {
         color: #333999;
         font-size: 16px;
         font-weight: 600;
-        margin-top: 90px;
+        margin-top: 160px;
         text-align: center;
     }
 }
@@ -721,15 +776,16 @@ body {
 /* Small Mobile View (max-width: 576px) */
 @media (max-width: 576px) {
     .swiper-container {
-        width: 250px;
-        height: 100%;
+        width: 300px;
+        height: 600px;
         z-index: 999;
         margin: 30px auto 40px;
     }
 
     .swiper-slide img {
-        width: 250px;
-        height: 400px;
+        width: 280px;
+        height: 500px;
+        margin-left: 8px;
     }
 
     .how-work-main-head {
@@ -750,13 +806,13 @@ body {
 /* Rexx how it works */
 
 /* Rexx testimonial */
-.testimonials{
+.testimonial{
     background-image: url("../Images/unnamed.png");
     /*background-color: pink;*/
     padding-top: 120px;
     padding-bottom: 60px;
 }
-.testimonials-sub-card{
+/*.testimonials-sub-card{
     border: 2px solid #989bcc;
     padding: 20px;
 }
@@ -810,7 +866,7 @@ body {
         font-size: 25px;
         font-weight: 600;
     }
-}
+}*/
 /* Rexx testimonials */
 
 /* Rexx contact Us */
@@ -863,7 +919,7 @@ body {
 .input-box label {
     font-size: 15px;
     font-weight: 500;
-    color: #333999;
+    color: #222222;
     margin-bottom: 5px; 
 }
 
@@ -871,7 +927,7 @@ body {
     width: 100%;
     height: 40px;
     background: transparent;
-    border: 1px solid #333999;
+    border: 1px solid #d2d8dd;
     border-radius: 5px;
     outline: none;
     color: #000;
@@ -912,15 +968,17 @@ textarea.input {
     border-radius: 50%;
     background-color: #333999;
     display: flex;
+    flex: column;
     justify-content: center;
     align-items: center;
+    padding-top: 5px;
     margin-left: 5px;
 }
 
 .icon-style {
     color: #fff;
     font-size: 20px;
-    padding-bottom: 20px;
+    
 }
 
 
@@ -931,14 +989,15 @@ textarea.input {
     align-items: center;
     justify-content: center;
     padding: 80px 0;
+    
 }
 .subscribe-container-card{
     border-radius: 20px; 
-
     padding: 30px; 
-    max-width: 500px; 
+    max-width: 600px; 
     width: 100%; 
     margin: 0 auto; 
+    text-align: center;
 }
 
 .subscribe-heading {
@@ -968,6 +1027,13 @@ textarea.input {
     color: #fff;
     padding: 10px;
 }
+@media (max-width: 600px){
+    .subscribe-container {
+        padding-top: 60px;
+        
+    }
+}
+
 
 .footer-container-2 {
     width: 100%;
@@ -978,6 +1044,13 @@ textarea.input {
     font-size: 16px;
     color: #000;
     font-weight: 600;
+}
+@media (max-width: 600px){
+    .footer-container-2 p {
+        font-size: 10px;
+        color: #000;
+        font-weight: 600;
+    }
 }
 
 hr {
@@ -1011,19 +1084,255 @@ hr {
     text-align: center;
     padding-bottom: 40px;
 }
+@media screen and (max-width: 400px){
+    .subscribe-container {
+        background-color: #f8f9fa;
+        width: 100%;
+        padding: 0px;
+        
+    }
+    .subscribe-container-card{
+        border-radius: 20px; 
+        padding: 0px;
+        text-align: none;
+    }
+}
 /* Rexx Subscribe*/
 
 
 
 
+.caurosuel-sub-card{
+    text-align: center;
+    padding-left: 40px;
+    padding-right: 50px;
+}
+.testi-profile{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+.testi-sub-card{
+    background-color: rgba(51, 57, 153, 0.2);
+    padding: 10px;
+    border-radius: 5px;
+}
+.testimonial .carousel-control-prev-icon{
+    background-color: #333999;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    
+    
+}
+.testimonial .carousel-control-next-icon {
+    background-color: #333999;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    
+}
+.testi-descripation-container {
+    background: rgba(51, 57, 153, 1);
+    border-radius: 10px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    position: relative;
+    text-align: center;
+    margin-left: 50px;
+    margin-right: 50px;
+}
 
+.testi-sub-card-para {
+    color: #fff;
+    font-size: 16px;
+    padding: 0 20px;
+}
 
+.testi-icon {
+    font-size: 30px;
+    color: #fff;
+}
 
+.start-quote {
+    position: absolute;
+    left: 10px;
+    top: -10px;
+}
 
+.end-quote {
+    position: absolute;
+    right: 10px;
+    bottom: -10px;
+}
+.testi-descripation-container p{
+    color: #fff;
+}
+.testi-main-head{
+    color: #333999;
+    font-size: 40px;
+    font-weight: 600;
+}
+.testi-main-para{
+    color: #fff;
+    font-size: 20px;
+}
+.testi-sub-card-head{
+    color: #333999;
+    font-size: 20px;
+    margin-bottom: 0px;
+}
+.testi-sub-card-para{
+    color: #000;
+    font-size: 16px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+.testi-icon{
+    font-size: 45px;
+    color: #fff;
+    
+    
+}
+.testi-profile-container{
+    border: 1px solid #333999;
+    
+    margin-top: 20px;
+}
+.testi-sub-head{
+    font-size: 20px;
+    color: #333999;
+    font-weight: bold;
+}
+.testi-sub-para{
+    font-size: 16px;
+    color: #000;
+}
+.testimonials-para{
+    color: #333999;
+    font-size: 16px;
+    font-weight: 600;
+    padding-top: 20px;
+    
+}
+.testimonials-head{
+    
+    font-size: 35px;
+    font-weight: 600;
+}
+@media(max-width: 800px){
+    .testimonials-head {
+        font-size: 30px;
+        font-weight: 600;
+    }
+}
+@media(max-width: 576px){
+    .testimonials-container{
+       
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .caurosuel-sub-card{
+        text-align: center;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .testi-main-head {
+        font-size: 20px;
+        padding-top: 30px;
+    }
+    .testi-sub-card-para{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .testi-sub-head{
+        font-size: 16px;
+    }
+    .testimonials-head {
+        font-size: 25px;
+        font-weight: 600;
+    }
+    .testi-descripation-container {
+        background: rgba(51, 57, 153, 1);
+        border-radius: 10px;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        position: relative;
+        text-align: center;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    
+    .testimonial .carousel-control-prev-icon {
+        background-color: #333999;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        margin-top: 90px;
+    }
+    .testimonial .carousel-control-next-icon {
+        background-color: #333999;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        margin-top: 90px;
+    }
+}
+.contact-main-details{
+    background-color: #fff;
+    box-shadow: 4px 4px 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 40px;
+    margin-top: 30px;
+}
+.contact-details-head{
+    font-size: 25px;
+    font-weight: 600;
+    
+}
+.contact-details-para{
+    font-size: 16px;
 
+}
+/*.submit-form-2{
+    padding: 2rem;
+    border-top: 1px solid #c7c7c7;
+}*/
+.submit-form-2 form{
+    padding-bottom: 1rem;
+    padding-top: 40px;
+}
+.form-control{
+    width: 100%;
+    border: 1.5px solid #c7c7c7;
+    border-radius: 5px;
+    padding: 0.7rem;
+    margin: 0.6rem 0;
+    font-size: 1rem;
+    outline: 0;
+}
+.form-control:focus{
+    box-shadow: 0 0 6px -3px rgba(48, 48, 48, 1);
 
-
-
-
-
+}
+.submit-form-2 form div{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 0.6rem;
+}
+@media (max-width: 800px){
+    .contact-us-main-head {
+        font-size: 30px;
+        font-weight: 600;
+        text-align: center;
+        padding-bottom: 40px;
+    }
+    .contact-us-container-2 {
+        padding-top: 90px;
+        padding-bottom: 50px;
+        background-color: #fff;
+    }
+}
 
